--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@vercel/analytics": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-script": "^2.0.5",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
