--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.4.1",
+    "core-js": "^3.39.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-script": "^2.0.5",
-    "react-scripts": "^5.0.1",
-    "typescript": "^5.7.2",
+    "react-scripts": "^3.0.1",
+    "typescript": "^3.9.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
