--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.4.1",
+    "axios": "^1.7.9",
     "core-js": "^3.39.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
