--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "ruter": "^0.0.3",
+    "socket.io-client": "^4.8.1",
     "typescript": "^3.9.10",
     "web-vitals": "^2.1.4"
   },
